--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "1.3.1",
     "country-list": "2.3.0",
     "firebase": "10.13.1",
     "next": "14.2.11",
